# biss-bot

./: .gitignore  .replit  Dockerfile  README.md  bot.py  config.json  config.toml  get_access_token.py  keep_alive.py  pyproject.toml  requirements.txt  schedule_messages.py  student_manager.py
cogs/: biss.py  fun.py  general.py  moderation.py  owner.py  template.py  tictactoe.py
database/: sahi.csv  schema.sql  students.csv
exceptions/: __init__.py
helpers/: calendar.py  checks.py  db_manager.py  discord_tools.py  student_manager.py
